--- a/WMBUS-reader-v4.yaml
+++ b/WMBUS-reader-v4.yaml
@@ -24,9 +24,12 @@ esp32:
 #####  Therefore, it is advisable to follow the information on the site of the author of the software:
 #####  https://github.com/SzczepanLeon/esphome-components
 external_components:
-  - source: github://SzczepanLeon/esphome-components@version_4
-    components: [ wmbus ]
-    refresh: 0d
+  - source: github://SzczepanLeon/esphome-components@main
+    components:
+      - socket_transmitter
+      - wmbus_common
+      - wmbus_radio
+      - wmbus_meter
 
 # Status LED for connection
 status_led:
